// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field Renderd as variant 'filled' 1`] = `
<div
  className="Field1645346547__root Field1645346547---variant-6-filled Field1645346547---vol-1-1 Field1645346547---labelPosition-4-over"
  data-id="field"
>
  <label
    className="Label3314882859__root Field1645346547__inputLabel"
    data="random"
    htmlFor="test"
    id="label-id"
  >
    <span
      className="Label3314882859__labelText"
    >
      My field
    </span>
  </label>
  <div
    className="Field1645346547__fieldContainer"
  >
    <input
      aria-labelledby="label-id"
      className="Field1645346547__fieldInput"
      id="testField"
      type="text"
    />
    <fieldset
      aria-hidden="true"
      className="Field1645346547__fieldset"
    >
      <legend
        className="Field1645346547__legend"
      >
        My field
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`Field Renderd as variant 'outlined' 1`] = `
<div
  className="Field1645346547__root Field1645346547---variant-8-outlined Field1645346547---vol-1-1 Field1645346547---labelPosition-4-over"
  data-id="field"
>
  <label
    className="Label3314882859__root Field1645346547__inputLabel"
    data="random"
    htmlFor="test"
    id="label-id"
  >
    <span
      className="Label3314882859__labelText"
    >
      My field
    </span>
  </label>
  <div
    className="Field1645346547__fieldContainer"
  >
    <input
      aria-labelledby="label-id"
      className="Field1645346547__fieldInput"
      id="testField"
      type="text"
    />
    <fieldset
      aria-hidden="true"
      className="Field1645346547__fieldset"
    >
      <legend
        className="Field1645346547__legend"
      >
        My field
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`Field Renders as variant 'quiet' 1`] = `
<div
  className="Field1645346547__root Field1645346547---variant-5-quiet Field1645346547---vol-1-1 Field1645346547---labelPosition-4-over"
  data-id="field"
>
  <label
    className="Label3314882859__root Field1645346547__inputLabel"
    data="random"
    htmlFor="test"
    id="label-id"
  >
    <span
      className="Label3314882859__labelText"
    >
      My field
    </span>
  </label>
  <div
    className="Field1645346547__fieldContainer"
  >
    <input
      aria-labelledby="label-id"
      className="Field1645346547__fieldInput"
      id="testField"
      type="text"
    />
    <fieldset
      aria-hidden="true"
      className="Field1645346547__fieldset"
    >
      <legend
        className="Field1645346547__legend"
      >
        My field
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`Field Renders default field as variant 'outlined', labelPosition 'over', volume '1' 1`] = `
<div
  className="Field1645346547__root Field1645346547---variant-8-outlined Field1645346547---vol-1-1 Field1645346547---labelPosition-4-over"
  data-id="field"
>
  <label
    className="Label3314882859__root Field1645346547__inputLabel"
    data="random"
    htmlFor="test"
    id="label-id"
  >
    <span
      className="Label3314882859__labelText"
    >
      My field
    </span>
  </label>
  <div
    className="Field1645346547__fieldContainer"
  >
    <input
      aria-labelledby="label-id"
      className="Field1645346547__fieldInput"
      id="testField"
      type="text"
    />
    <fieldset
      aria-hidden="true"
      className="Field1645346547__fieldset"
    >
      <legend
        className="Field1645346547__legend"
      >
        My field
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`Field Renders with labelPosition 'hidden' 1`] = `
<div
  className="Field1645346547__root Field1645346547---variant-8-outlined Field1645346547---vol-1-1 Field1645346547---labelPosition-6-hidden"
  data-id="field"
>
  <span
    className="visuallyHidden224360861__root"
  >
    <label
      className="Label3314882859__root Field1645346547__inputLabel"
      data="random"
      htmlFor="test"
      id="label-id"
    >
      <span
        className="Label3314882859__labelText"
      >
        My field
      </span>
    </label>
  </span>
  <div
    className="Field1645346547__fieldContainer"
  >
    <input
      aria-labelledby="label-id"
      className="Field1645346547__fieldInput"
      id="testField"
      type="text"
    />
    <fieldset
      aria-hidden="true"
      className="Field1645346547__fieldset"
    >
      <legend
        className="Field1645346547__legend"
      />
    </fieldset>
  </div>
</div>
`;

exports[`Field Renders with labelPosition 'over' 1`] = `
<div
  className="Field1645346547__root Field1645346547---variant-8-outlined Field1645346547---vol-1-1 Field1645346547---labelPosition-4-over"
  data-id="field"
>
  <label
    className="Label3314882859__root Field1645346547__inputLabel"
    data="random"
    htmlFor="test"
    id="label-id"
  >
    <span
      className="Label3314882859__labelText"
    >
      My field
    </span>
  </label>
  <div
    className="Field1645346547__fieldContainer"
  >
    <input
      aria-labelledby="label-id"
      className="Field1645346547__fieldInput"
      id="testField"
      type="text"
    />
    <fieldset
      aria-hidden="true"
      className="Field1645346547__fieldset"
    >
      <legend
        className="Field1645346547__legend"
      >
        My field
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`Field Renders with labelPosition 'side' 1`] = `
<div
  className="Field1645346547__root Field1645346547---variant-8-outlined Field1645346547---vol-1-1 Field1645346547---labelPosition-4-side"
  data-id="field"
>
  <label
    className="Label3314882859__root Field1645346547__inputLabel"
    data="random"
    htmlFor="test"
    id="label-id"
  >
    <span
      className="Label3314882859__labelText"
    >
      My field
    </span>
  </label>
  <div
    className="Field1645346547__fieldContainer"
  >
    <input
      aria-labelledby="label-id"
      className="Field1645346547__fieldInput"
      id="testField"
      type="text"
    />
    <fieldset
      aria-hidden="true"
      className="Field1645346547__fieldset"
    >
      <legend
        className="Field1645346547__legend"
      >
        My field
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`Field Renders with labelPosition 'top' 1`] = `
<div
  className="Field1645346547__root Field1645346547---variant-8-outlined Field1645346547---vol-1-1 Field1645346547---labelPosition-3-top"
  data-id="field"
>
  <label
    className="Label3314882859__root Field1645346547__inputLabel"
    data="random"
    htmlFor="test"
    id="label-id"
  >
    <span
      className="Label3314882859__labelText"
    >
      My field
    </span>
  </label>
  <div
    className="Field1645346547__fieldContainer"
  >
    <input
      aria-labelledby="label-id"
      className="Field1645346547__fieldInput"
      id="testField"
      type="text"
    />
    <fieldset
      aria-hidden="true"
      className="Field1645346547__fieldset"
    >
      <legend
        className="Field1645346547__legend"
      >
        My field
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`Field Renders with no variant 'false' 1`] = `
<div
  className="Field1645346547__root Field1645346547---vol-1-1 Field1645346547---labelPosition-4-over"
  data-id="field"
>
  <label
    className="Label3314882859__root Field1645346547__inputLabel"
    data="random"
    htmlFor="test"
    id="label-id"
  >
    <span
      className="Label3314882859__labelText"
    >
      My field
    </span>
  </label>
  <div
    className="Field1645346547__fieldContainer"
  >
    <input
      aria-labelledby="label-id"
      className="Field1645346547__fieldInput"
      id="testField"
      type="text"
    />
  </div>
</div>
`;

exports[`Field Renders with no volume 'undefined' 1`] = `
<div
  className="Field1645346547__root Field1645346547---variant-8-outlined Field1645346547---vol-1-1 Field1645346547---labelPosition-4-over"
  data-id="field"
>
  <label
    className="Label3314882859__root Field1645346547__inputLabel"
    data="random"
    htmlFor="test"
    id="label-id"
  >
    <span
      className="Label3314882859__labelText"
    >
      My field
    </span>
  </label>
  <div
    className="Field1645346547__fieldContainer"
  >
    <input
      aria-labelledby="label-id"
      className="Field1645346547__fieldInput"
      id="testField"
      type="text"
    />
    <fieldset
      aria-hidden="true"
      className="Field1645346547__fieldset"
    >
      <legend
        className="Field1645346547__legend"
      >
        My field
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`Field Renders with volume '1' 1`] = `
<div
  className="Field1645346547__root Field1645346547---variant-8-outlined Field1645346547---vol-1-1 Field1645346547---labelPosition-4-over"
  data-id="field"
>
  <label
    className="Label3314882859__root Field1645346547__inputLabel"
    data="random"
    htmlFor="test"
    id="label-id"
  >
    <span
      className="Label3314882859__labelText"
    >
      My field
    </span>
  </label>
  <div
    className="Field1645346547__fieldContainer"
  >
    <input
      aria-labelledby="label-id"
      className="Field1645346547__fieldInput"
      id="testField"
      type="text"
    />
    <fieldset
      aria-hidden="true"
      className="Field1645346547__fieldset"
    >
      <legend
        className="Field1645346547__legend"
      >
        My field
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`Field Renders with volume '2' 1`] = `
<div
  className="Field1645346547__root Field1645346547---variant-8-outlined Field1645346547---vol-1-2 Field1645346547---labelPosition-4-over"
  data-id="field"
>
  <label
    className="Label3314882859__root Field1645346547__inputLabel"
    data="random"
    htmlFor="test"
    id="label-id"
  >
    <span
      className="Label3314882859__labelText"
    >
      My field
    </span>
  </label>
  <div
    className="Field1645346547__fieldContainer"
  >
    <input
      aria-labelledby="label-id"
      className="Field1645346547__fieldInput"
      id="testField"
      type="text"
    />
    <fieldset
      aria-hidden="true"
      className="Field1645346547__fieldset"
    >
      <legend
        className="Field1645346547__legend"
      >
        My field
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`Field Renders with volume '3' 1`] = `
<div
  className="Field1645346547__root Field1645346547---variant-8-outlined Field1645346547---vol-1-3 Field1645346547---labelPosition-4-over"
  data-id="field"
>
  <label
    className="Label3314882859__root Field1645346547__inputLabel"
    data="random"
    htmlFor="test"
    id="label-id"
  >
    <span
      className="Label3314882859__labelText"
    >
      My field
    </span>
  </label>
  <div
    className="Field1645346547__fieldContainer"
  >
    <input
      aria-labelledby="label-id"
      className="Field1645346547__fieldInput"
      id="testField"
      type="text"
    />
    <fieldset
      aria-hidden="true"
      className="Field1645346547__fieldset"
    >
      <legend
        className="Field1645346547__legend"
      >
        My field
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`Field Renders with volume '4' 1`] = `
<div
  className="Field1645346547__root Field1645346547---variant-8-outlined Field1645346547---vol-1-4 Field1645346547---labelPosition-4-over"
  data-id="field"
>
  <label
    className="Label3314882859__root Field1645346547__inputLabel"
    data="random"
    htmlFor="test"
    id="label-id"
  >
    <span
      className="Label3314882859__labelText"
    >
      My field
    </span>
  </label>
  <div
    className="Field1645346547__fieldContainer"
  >
    <input
      aria-labelledby="label-id"
      className="Field1645346547__fieldInput"
      id="testField"
      type="text"
    />
    <fieldset
      aria-hidden="true"
      className="Field1645346547__fieldset"
    >
      <legend
        className="Field1645346547__legend"
      >
        My field
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`Field Renders with volume '5' 1`] = `
<div
  className="Field1645346547__root Field1645346547---variant-8-outlined Field1645346547---vol-1-5 Field1645346547---labelPosition-4-over"
  data-id="field"
>
  <label
    className="Label3314882859__root Field1645346547__inputLabel"
    data="random"
    htmlFor="test"
    id="label-id"
  >
    <span
      className="Label3314882859__labelText"
    >
      My field
    </span>
  </label>
  <div
    className="Field1645346547__fieldContainer"
  >
    <input
      aria-labelledby="label-id"
      className="Field1645346547__fieldInput"
      id="testField"
      type="text"
    />
    <fieldset
      aria-hidden="true"
      className="Field1645346547__fieldset"
    >
      <legend
        className="Field1645346547__legend"
      >
        My field
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`Field Renders with volume '6' 1`] = `
<div
  className="Field1645346547__root Field1645346547---variant-8-outlined Field1645346547---vol-1-6 Field1645346547---labelPosition-4-over"
  data-id="field"
>
  <label
    className="Label3314882859__root Field1645346547__inputLabel"
    data="random"
    htmlFor="test"
    id="label-id"
  >
    <span
      className="Label3314882859__labelText"
    >
      My field
    </span>
  </label>
  <div
    className="Field1645346547__fieldContainer"
  >
    <input
      aria-labelledby="label-id"
      className="Field1645346547__fieldInput"
      id="testField"
      type="text"
    />
    <fieldset
      aria-hidden="true"
      className="Field1645346547__fieldset"
    >
      <legend
        className="Field1645346547__legend"
      >
        My field
      </legend>
    </fieldset>
  </div>
</div>
`;
